Bug 1280653 - Read into the X11 event queue in GLContextGLX::MakeCurrent to queue DRI invalidation events. r=lsalzman

MozReview-Commit-ID: 5N076lUlCkl